src/sass/_background.scss
.background {
  position: relative;
  z-index: -1;

  &::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 185rem;
    z-index: -1;
    -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 50%, 50% 80%, 0 50%);
    clip-path: polygon(0% 0%, 100% 0%, 100% 85%, 50% 100%, 0 85%);
    background: radial-gradient(
      farthest-corner at 120px 190px,
      hsla(260, 50%, 99%, 0.65) 0%,
      hsla(236, 69%, 94%, 0.85) 43%,
      hsla(258, 74%, 99%, 1) 100%
    );
  }

  &__shapes {
    width: 100vw;
    overflow-x: hidden;
  }
}

.arrow {
  position: absolute;
  fill: $primary-blue;
  width: 5rem;
  bottom: 2rem;
  left: calc(50% - 2.5rem);
}

.cross {
  fill: $primary-blue;
  position: absolute;
  width: 6.5rem;

  &--1 {
    bottom: 38rem;
    left: 10%;
  }

  &--2 {
    bottom: -10rem;
    left: 12%;
  }

  &--3 {
    bottom: 55rem;
    right: 20%;
  }

  &--4 {
    bottom: -7rem;
    right: 32%;
  }

  &--5 {
    bottom: -18rem;
    left: 88%;
  }

  &--6 {
    bottom: 6rem;
    left: 28%;
  }
}

.donut {
  border-radius: 50%;
  position: absolute;

  &--lg {
    border: 5rem solid $bg-shape-color;
    height: 40rem;
    width: 40rem;
    top: -13rem;
    right: -13rem;
  }

  &--sm {
    border: 45px solid $bg-shape-color;
    height: 30rem;
    width: 30rem;
    bottom: 35%;
    left: -13rem;
  }
}

.dots {
  position: absolute;
  background-size: 5em 5rem;
  background-position: 0 0;
  z-index: -1;

  &--lg {
    background-image: radial-gradient($bg-shape-color 30%, transparent 0);
    height: 25rem;
    width: 25rem;
    bottom: 52%;
    right: -8%;
  }

  &--sm {
    background-image: radial-gradient($bg-shape-color 30%, transparent 0);
    height: 20rem;
    width: 20rem;
    top: -4%;
    left: 20%;
  }
}
.sphere {
  position: absolute;
  border-radius: 50%;
  background: linear-gradient(
    left top,
    hsla(0, 0%, 100%, 0) 20%,
    hsla(237, 35%, 85%, 1) 100%
  );

  &--lg {
    height: 300px;
    width: 300px;
  }

  &--md {
    height: 250px;
    width: 250px;
  }

  &--sm {
    height: 200px;
    width: 200px;
  }
}

@media only screen and (max-width: $ds-medium) {
  .background {
    &::before {
      -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 94%, 50% 100%, 0 94%);
      clip-path: polygon(0% 0%, 100% 0%, 100% 94%, 50% 100%, 0 94%);
    }
  }
}

@media only screen and (max-width: $ds-small) {
  .background {
    &::before {
      height: 194rem;
    }
  }
  .donut {
    &--lg {
      border: 4rem solid $bg-shape-color;
      height: 30rem;
      width: 30rem;
      right: 19rem;
      top: 4rem;
    }

    &--sm {
      border: 3.5rem solid $bg-shape-color;
      height: 25rem;
      width: 25rem;
      bottom: -16%;
      left: -7rem;
    }
  }

  .dots {
    &--lg {
      bottom: 29%;
      right: -33%;
    }

    &--sm {
      background-image: radial-gradient(
        hsla(230, 63%, 94%, 1) 30%,
        transparent 0
      );
      top: 80%;
      left: 25rem;
    }
  }

  .cross {
    fill: $primary-blue;
    position: absolute;
    width: 6.5rem;

    &--1 {
      bottom: 82rem;
      left: 14%;
    }

    &--2 {
      bottom: 75rem;
      left: 86%;
    }

    &--3 {
      bottom: 114;
      right: 100%;
    }

    &--4 {
      bottom: -12rem;
      right: -1%;
    }

    &--5 {
      bottom: -8.5rem;
      left: 11%;
    }

    &--6 {
      bottom: -16rem;
      left: 30%;
    }
  }
}

